--- a/GuideForMacOSX.html
+++ b/GuideForMacOSX.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=U8W5kS"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=U8W5kS" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=WPMVJQ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=WPMVJQ" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -336,7 +336,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1u" data-rv-view="181">
+<section class="mbr-section" id="witsec-modal-window-block-1u" data-rv-view="458">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -394,7 +394,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9u" data-rv-view="182">
+<section class="mbr-section" id="witsec-modal-window-block-9u" data-rv-view="459">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -452,7 +452,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1v" data-rv-view="183">
+<section class="mbr-section" id="witsec-modal-window-block-1v" data-rv-view="460">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
