--- a/Hints.html
+++ b/Hints.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=yNxfm5"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=yNxfm5" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=isyxhT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=isyxhT" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -396,7 +396,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1o" data-rv-view="380">
+<section class="mbr-section" id="witsec-modal-window-block-1o" data-rv-view="108">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -469,7 +469,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9m" data-rv-view="381">
+<section class="mbr-section" id="witsec-modal-window-block-9m" data-rv-view="109">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -542,7 +542,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1p" data-rv-view="382">
+<section class="mbr-section" id="witsec-modal-window-block-1p" data-rv-view="110">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -617,7 +617,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-8e" data-rv-view="383">
+<section class="mbr-section" id="witsec-modal-window-block-8e" data-rv-view="111">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
