--- a/guidelines.html
+++ b/guidelines.html
@@ -35,7 +35,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=13RS4L"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=13RS4L" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=yedwtR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=yedwtR" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -534,7 +534,7 @@ Produce video clips.">
         </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-a3" data-rv-view="455">
+<section class="mbr-section" id="witsec-modal-window-block-a3" data-rv-view="719">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -592,7 +592,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-a4" data-rv-view="456">
+<section class="mbr-section" id="witsec-modal-window-block-a4" data-rv-view="720">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -650,7 +650,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-a5" data-rv-view="457">
+<section class="mbr-section" id="witsec-modal-window-block-a5" data-rv-view="721">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
