--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=XxLS2g"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=XxLS2g" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=lUCKad"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=lUCKad" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -130,7 +130,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-a7" data-rv-view="196">
+<section class="mbr-section" id="witsec-modal-window-block-a7" data-rv-view="473">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -188,7 +188,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-23" data-rv-view="197">
+<section class="mbr-section" id="witsec-modal-window-block-23" data-rv-view="474">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -246,7 +246,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9p" data-rv-view="198">
+<section class="mbr-section" id="witsec-modal-window-block-9p" data-rv-view="475">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -304,7 +304,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-24" data-rv-view="199">
+<section class="mbr-section" id="witsec-modal-window-block-24" data-rv-view="476">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
