--- a/GuideForWindows.html
+++ b/GuideForWindows.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=BH2mTj"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=BH2mTj" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=XWQcF8"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=XWQcF8" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -202,7 +202,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1q" data-rv-view="122">
+<section class="mbr-section" id="witsec-modal-window-block-1q" data-rv-view="312">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -275,7 +275,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9s" data-rv-view="123">
+<section class="mbr-section" id="witsec-modal-window-block-9s" data-rv-view="313">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -348,7 +348,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1r" data-rv-view="124">
+<section class="mbr-section" id="witsec-modal-window-block-1r" data-rv-view="314">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
