--- a/Video.html
+++ b/Video.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YldMZf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YldMZf" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=l5k9JC"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=l5k9JC" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -533,7 +533,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="244">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="156">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -606,7 +606,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9n" data-rv-view="245">
+<section class="mbr-section" id="witsec-modal-window-block-9n" data-rv-view="157">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -679,7 +679,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6k" data-rv-view="246">
+<section class="mbr-section" id="witsec-modal-window-block-6k" data-rv-view="158">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
