--- a/GuideForLinux.html
+++ b/GuideForLinux.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=q4VlyM"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=q4VlyM" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=NhP3GR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=NhP3GR" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -200,7 +200,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1s" data-rv-view="419">
+<section class="mbr-section" id="witsec-modal-window-block-1s" data-rv-view="142">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -258,7 +258,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9t" data-rv-view="420">
+<section class="mbr-section" id="witsec-modal-window-block-9t" data-rv-view="143">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -316,7 +316,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1t" data-rv-view="421">
+<section class="mbr-section" id="witsec-modal-window-block-1t" data-rv-view="144">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
