--- a/Tutorials.html
+++ b/Tutorials.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=cUty6n"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=cUty6n" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=5Jdncr"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=5Jdncr" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -269,7 +269,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-3m" data-rv-view="292">
+<section class="mbr-section" id="witsec-modal-window-block-3m" data-rv-view="419">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -342,7 +342,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9r" data-rv-view="293">
+<section class="mbr-section" id="witsec-modal-window-block-9r" data-rv-view="420">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -415,7 +415,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-3n" data-rv-view="294">
+<section class="mbr-section" id="witsec-modal-window-block-3n" data-rv-view="421">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
