--- a/Updates.html
+++ b/Updates.html
@@ -33,7 +33,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=33OqCZ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=33OqCZ" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fHRhhz"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fHRhhz" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -126,7 +126,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-89" data-rv-view="696">
+<section class="mbr-section" id="witsec-modal-window-block-89" data-rv-view="432">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -184,7 +184,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9q" data-rv-view="697">
+<section class="mbr-section" id="witsec-modal-window-block-9q" data-rv-view="433">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -242,7 +242,7 @@ Produce video clips.">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-8a" data-rv-view="698">
+<section class="mbr-section" id="witsec-modal-window-block-8a" data-rv-view="434">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
