--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=PRFXSj"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=PRFXSj" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=EYO9I3"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=EYO9I3" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -122,24 +122,24 @@ Produce video clips.">
             <div class="card col-12 col-md-4 col-lg-2 p-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://sporttactic.net/desktopvideoappfree/v16/" target="_blank"><span class="mbr-iconfont mbrib-video" style=""></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop Video webapp V1.6</strong><br><strong>Used for all sports</strong></h4>
+                        <a href="https://sporttactic.net/desktopvideoappfree/v17/" target="_blank"><span class="mbr-iconfont mbrib-video" style=""></span></a>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop Video webapp V1.7</strong><br><strong>Used for all sports</strong></h4>
                     </div>
                 </div>
             </div>
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://sporttactic.net/desktopappfree/v42/" target="_blank"><span class="mbr-iconfont mbri-desktop" style=""></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop webapp&nbsp;</strong><br><strong>V4.2</strong></h4>
+                        <a href="https://sporttactic.net/desktopappfree/v43/" target="_blank"><span class="mbr-iconfont mbri-desktop" style=""></span></a>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop webapp&nbsp;</strong><br><strong>V4.3</strong></h4>
                     </div>
                 </div>
             </div>
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://sporttactic.github.io/mobileappfree/v42/" target="_blank"><span class="mbr-iconfont mbrib-devices" style=""></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Mobile / Tablet webapp V4.2</strong></h4>
+                        <a href="https://sporttactic.github.io/mobileappfree/v43/" target="_blank"><span class="mbr-iconfont mbrib-devices" style=""></span></a>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Mobile / Tablet webapp V4.3</strong></h4>
                     </div>
                 </div>
             </div>
