--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Produce video clips.">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=EYO9I3"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=EYO9I3" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=blhPax"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=blhPax" type="text/css">
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -96,7 +96,7 @@ Produce video clips.">
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-7 image-wrapper">
-                <img class="w-100" src="assets/images/sporttactic-websitev1.png" alt="SportTacTic">
+                <img class="w-100" src="assets/images/sporttactic-websitev2.png" alt="SportTacTic">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
